# php/swag/storage/api-docs/api-docs.json
@@ -15,7 +15,7 @@
                 "parameters": [
                     {
                         "name": "email",
-                        "in": "query",
+                        "in": "path",
                         "required": true,
                         "schema": {
                             "type": "string",
@@ -24,7 +24,7 @@
                     },
                     {
                         "name": "name",
-                        "in": "query",
+                        "in": "path",
                         "required": true,
                         "schema": {
                             "type": "string",
@@ -33,7 +33,7 @@
                     },
                     {
                         "name": "password",
-                        "in": "query",
+                        "in": "path",
                         "required": true,
                         "schema": {
                             "type": "string",
@@ -41,18 +41,46 @@
                         }
                     }
                 ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/SignupRequest"
+                            }
+                        }
+                    }
+                },
                 "responses": {
                     "201": {
                         "description": "Success Create user",
                         "content": {
-                            "application/json": {}
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/AuthSignupSuccessResponce"
+                                }
+                            }
                         }
                     },
                     "404": {
-                        "description": "not found fail"
+                        "description": "not found fail",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/HttpNotFoundResponce"
+                                }
+                            }
+                        }
                     },
                     "422": {
-                        "description": "The given data was invalid."
+                        "description": "The given data was invalid.",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/AuthLoginUnprocessableResponce"
+                                }
+                            }
+                        }
                     }
                 }
             }
@@ -102,7 +130,14 @@
                         }
                     },
                     "404": {
-                        "description": "not found"
+                        "description": "not found",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/HttpNotFoundResponce"
+                                }
+                            }
+                        }
                     },
                     "422": {
                         "description": "not found",
@@ -212,7 +247,7 @@
                     "Tests"
                 ],
                 "summary": "Store new Test",
-                "description": "Returns Test data",
+                "description": "Store new Test",
                 "operationId": "storeTest",
                 "requestBody": {
                     "required": true,
@@ -392,6 +427,33 @@
     },
     "components": {
         "schemas": {
+            "SignupRequest": {
+                "title": "Signup reqest",
+                "description": "Create new account of user",
+                "required": [
+                    "name",
+                    "email",
+                    "password"
+                ],
+                "properties": {
+                    "name": {
+                        "title": "name",
+                        "description": "Name of user",
+                        "example": "Name of user"
+                    },
+                    "email": {
+                        "title": "email",
+                        "description": "User email ",
+                        "example": "qwe@mail.com"
+                    },
+                    "password": {
+                        "title": "password",
+                        "description": "Username password",
+                        "example": "demo1234"
+                    }
+                },
+                "type": "object"
+            },
             "LoginRequest": {
                 "title": "Login Request request",
                 "description": "Reqest for auth users request body data",
@@ -513,6 +575,19 @@
                 },
                 "type": "object"
             },
+            "AuthSignupSuccessResponce": {
+                "title": "AuthSignupSuccessResponce",
+                "description": "AuthSignupSuccessResponce",
+                "properties": {
+                    "status": {
+                        "title": "status",
+                        "description": "Success created user",
+                        "format": "string",
+                        "example": "success"
+                    }
+                },
+                "type": "object"
+            },
             "HttpFailResponce": {
                 "title": "HttpFailResponce",
                 "description": "HttpFailResponce"
@@ -520,6 +595,10 @@
             "HttpForbiddenResponce": {
                 "title": "HttpForbiddenResponce",
                 "description": "HttpForbiddenResponce"
+            },
+            "HttpNotFoundResponce": {
+                "title": "HttpNotFoundResponce",
+                "description": "HttpNotFoundResponce"
             },
             "HttpSuccessResponce": {
                 "title": "HttpSuccessResponce",
